Amended config file to include instruction to launch startx on login

--- a/bash/config
+++ b/bash/config
@@ -112,3 +112,9 @@ fi
 if [ -d "$HOME/android-sdks/platform-tools" ] ; then
     PATH=$PATH:$HOME/android-sdks/platform-tools
 fi
+
+#Run startx on login
+
+if [[ ! $DISPLAY && $XDG_VTNR -eq 1 ]]; then
+	exec startx
+fi
