Added clib Package manager to install list

--- a/vlc/vlc-qt-interface.conf
+++ b/vlc/vlc-qt-interface.conf
@@ -16,5 +16,5 @@ playlistSize=@Size(-1 -1)
 status-bar-visible=false
 
 [RecentsMRL]
-list=file:///home/eamoc/dsk1/111_MOVIES/Stalker.1979.REMASTERED.BDRemux.1080p.mkv
-times=0
+list=file:///tmp/mozilla_eamoc0/void-live-x86_64-20210218.iso, file:///home/eamoc/dsk1/111_MOVIES/Stalker.1979.REMASTERED.BDRemux.1080p.mkv
+times=0, 0
