Updated INSTALLED_PKGS, DELETED GIMP settings deleted glib settings. Added keybase stuff

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ glib-2.0/settings/keyfile
 bashtop/
 htop/
 openbox/menu.xml~
+GIMP/2.10/backups/
+GIMP/2.10/gimprc
+GIMP/2.10/profilerc
+gtk-2.0/
+keybase/kb-0000-2b0e94466359efaaad09b5bfe5a59eb8654dd9d1.saltpack
+GIMP/2.10/pluginrc
