added radnger conf, deleted qbittorrent modified dwm and .gitignore

--- a/vlc/vlc-qt-interface.conf
+++ b/vlc/vlc-qt-interface.conf
@@ -16,5 +16,5 @@ playlistSize=@Size(-1 -1)
 status-bar-visible=false
 
 [RecentsMRL]
-list=file:///tmp/mozilla_eamoc0/void-live-x86_64-20210218.iso, file:///home/eamoc/dsk1/111_MOVIES/Stalker.1979.REMASTERED.BDRemux.1080p.mkv
-times=0, 0
+list=file:///media/d1/111_VIDEOS/TRAINING_VIDS/PROGRAMMING/Trees%20and%20Graphs%20In-Depth/%5BFreeCoursesOnline.Me%5D%20FrontendMasters%20-%20Trees%20and%20Graphs%20In-Depth%20%28Workshop%29.mp4, file:///tmp/mozilla_eamoc0/void-live-x86_64-20210218.iso, file:///home/eamoc/dsk1/111_MOVIES/Stalker.1979.REMASTERED.BDRemux.1080p.mkv
+times=0, 0, 0
