--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@ GIMP/2.10/backups/
 GIMP/2.10/gimprc
 GIMP/2.10/profilerc
 gtk-2.0/
-keybase/kb-0000-2b0e94466359efaaad09b5bfe5a59eb8654dd9d1.saltpack
+keybase/*
 GIMP/2.10/pluginrc
 discord/
 *.o
 dwm-6.2/dwm
+qBittorrent/*
