--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ gtk-2.0/
 keybase/kb-0000-2b0e94466359efaaad09b5bfe5a59eb8654dd9d1.saltpack
 GIMP/2.10/pluginrc
 discord/
+qBittorrent/*
+qBittorrent/*
+QtProject.conf
+vlc/*
