--- a/qBittorrent/qBittorrent-data.conf
+++ b/qBittorrent/qBittorrent-data.conf
@@ -1,2 +1,2 @@
 [Stats]
-AllStats=@Variant(\0\0\0\x1c\0\0\0\x2\0\0\0\x12\0\x41\0l\0l\0t\0i\0m\0\x65\0U\0L\0\0\0\x5\0\0\0\x3J\v{\x89\0\0\0\x12\0\x41\0l\0l\0t\0i\0m\0\x65\0\x44\0L\0\0\0\x5\0\0\0\x1d~\x8d\x8a\x92)
+AllStats="@Variant(\0\0\0\x1c\0\0\0\x2\0\0\0\x12\0\x41\0l\0l\0t\0i\0m\0\x65\0U\0L\0\0\0\x5\0\0\0\x3j=p\x8e\0\0\0\x12\0\x41\0l\0l\0t\0i\0m\0\x65\0\x44\0L\0\0\0\x5\0\0\0\x1f\xc4\xda+\xa3)"
